--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Chantel's homepage!
+description: Please bookmark this page to keep track of my projects
